--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       let forceOrentationImg;
       let unityInstance = UnityLoader.instantiate(
         "unityContainer",
-        "Build/Build.json",
+        "Build/BS23Brochure.json",
         { onProgress: UnityLoadProgress }
       );
 
